fixtures/autofix-extra-resources-ingress_v1.yml
# This is a test yaml file
# to be autofixed

%YAML   1.1
%TAG    !   !foo
%TAG    !yaml!  tag:yaml.org,2002:
---
apiVersion: v1
kind: Namespace
metadata:
  name: default
  creationTimestamp: null
spec: {}
status: {}
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  creationTimestamp: null
  name: default-deny
  namespace: default
spec:
  podSelector: {}
  policyTypes:
  - Egress
